--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -39,6 +39,12 @@
 		width: 100%;
 		border-radius: 55px 0px 0px 55px;
 		padding: 80px;
+		max-height: 100vh;
+		overflow-y: scroll;
+
+		& > div {
+			max-height: 100%;
+		}
 	}
 
 	.loading-container {
@@ -51,13 +57,14 @@
 		}
 	}
 
-	@media screen and (max-width: 700px) {
+	@media screen and (max-width: 940px) {
 		flex-direction: column;
 		height: unset;
 
 		.form-container {
 			border-radius: 32px 32px 0 0;
 			padding: 32px;
+			max-height: unset;
 		}
 	}
 }
