--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -34,7 +34,8 @@
 		background-color: rgb(255, 88, 88) !important;
 	}
 	.form-button {
-		margin-top: 60px;
+		margin-top: 40px;
+		margin-bottom: 40px;
 	}
 	.flex-items {
 		display: flex;
