--- a/client/src/components/Batches/Batches.scss
+++ b/client/src/components/Batches/Batches.scss
@@ -3,8 +3,9 @@
 	flex-wrap: wrap;
 	justify-content: center;
 	gap: 30px;
-	// height: 240px;
+	min-height: 180px;
 	align-items: flex-end;
+	width: 100%;
 
 	.batches {
 		background-color: #fbab7e;
@@ -66,9 +67,11 @@
 
 	.loader__container {
 		width: 100%;
-		height: 500px;
+		// height: 180px;
+		align-self: center;
 		display: flex;
 		justify-content: center;
+		align-items: center;
 		img.loader {
 			width: 40px;
 		}
