--- a/client/src/pages/SignUp/SignUp.scss
+++ b/client/src/pages/SignUp/SignUp.scss
@@ -8,7 +8,7 @@
 		margin-bottom: 8px;
 	}
 	.form-button {
-		// margin-top: 30px;
+		margin-top: 20px;
 	}
 	& > .green {
 		text-decoration: none;
